LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Macao__c.field-meta.xml
<CustomField>
    <fullName>Macao__c</fullName>
    <label>Macao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>