LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Macedonia__c.field-meta.xml
<CustomField>
    <fullName>Macedonia__c</fullName>
    <label>Macedonia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>