LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Make_as_defaults__c.field-meta.xml
<CustomField>
    <fullName>Make_as_defaults__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make as defaults</label>
    <type>Checkbox</type>
</CustomField>