LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Malaysia__c.field-meta.xml
<CustomField>
    <fullName>Malaysia__c</fullName>
    <label>Malaysia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>