LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Malta__c.field-meta.xml
<CustomField>
    <fullName>Malta__c</fullName>
    <label>Malta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>