LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Mauritius__c.field-meta.xml
<CustomField>
    <fullName>Mauritius__c</fullName>
    <label>Mauritius</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>