LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Mongolia__c.field-meta.xml
<CustomField>
    <fullName>Mongolia__c</fullName>
    <label>Mongolia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>