LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Montenegro__c.field-meta.xml
<CustomField>
    <fullName>Montenegro__c</fullName>
    <label>Montenegro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>