LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Morocco__c.field-meta.xml
<CustomField>
    <fullName>Morocco__c</fullName>
    <label>Morocco</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>