LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Namibia__c.field-meta.xml
<CustomField>
    <fullName>Namibia__c</fullName>
    <label>Namibia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>