LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Namibia_Couple__c.field-meta.xml
<CustomField>
    <fullName>Namibia_Couple__c</fullName>
    <label>Namibia Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>