LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Nepal__c.field-meta.xml
<CustomField>
    <fullName>Nepal__c</fullName>
    <label>Nepal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>