LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Netherlands__c.field-meta.xml
<CustomField>
    <fullName>Netherlands__c</fullName>
    <label>Netherlands</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>