LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/New_Zealand__c.field-meta.xml
<CustomField>
    <fullName>New_Zealand__c</fullName>
    <label>New Zealand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>