LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/New_Zealand_Couple__c.field-meta.xml
<CustomField>
    <fullName>New_Zealand_Couple__c</fullName>
    <label>New Zealand Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>