LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Nigeria__c.field-meta.xml
<CustomField>
    <fullName>Nigeria__c</fullName>
    <label>Nigeria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>