LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Norway__c.field-meta.xml
<CustomField>
    <fullName>Norway__c</fullName>
    <label>Norway</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>