LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Pakistan__c.field-meta.xml
<CustomField>
    <fullName>Pakistan__c</fullName>
    <label>Pakistan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>