LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Palestinian_territory__c.field-meta.xml
<CustomField>
    <fullName>Palestinian_territory__c</fullName>
    <label>Palestinian territory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>