LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Panama__c.field-meta.xml
<CustomField>
    <fullName>Panama__c</fullName>
    <label>Panama</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>