LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Peru__c.field-meta.xml
<CustomField>
    <fullName>Peru__c</fullName>
    <label>Peru</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>