LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Phillippines__c.field-meta.xml
<CustomField>
    <fullName>Phillippines__c</fullName>
    <label>Phillippines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>