LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Poland__c.field-meta.xml
<CustomField>
    <fullName>Poland__c</fullName>
    <label>Poland</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>