LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Portugal__c.field-meta.xml
<CustomField>
    <fullName>Portugal__c</fullName>
    <label>Portugal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>