LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Puerto_Rico_Couple__c.field-meta.xml
<CustomField>
    <fullName>Puerto_Rico_Couple__c</fullName>
    <label>Puerto Rico Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>