LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Romania__c.field-meta.xml
<CustomField>
    <fullName>Romania__c</fullName>
    <label>Romania</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>