LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Russia__c.field-meta.xml
<CustomField>
    <fullName>Russia__c</fullName>
    <label>Russia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>