LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Saudi_Arabia__c.field-meta.xml
<CustomField>
    <fullName>Saudi_Arabia__c</fullName>
    <label>Saudi Arabia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>