LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Serbia__c.field-meta.xml
<CustomField>
    <fullName>Serbia__c</fullName>
    <label>Serbia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>