LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Singapore__c.field-meta.xml
<CustomField>
    <fullName>Singapore__c</fullName>
    <label>Singapore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>