LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Slovakia__c.field-meta.xml
<CustomField>
    <fullName>Slovakia__c</fullName>
    <label>Slovakia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>