LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Slovenia__c.field-meta.xml
<CustomField>
    <fullName>Slovenia__c</fullName>
    <label>Slovenia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>