LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/South_Africa__c.field-meta.xml
<CustomField>
    <fullName>South_Africa__c</fullName>
    <label>South Africa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>