LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/South_Africa_Couple__c.field-meta.xml
<CustomField>
    <fullName>South_Africa_Couple__c</fullName>
    <label>South Africa Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>