LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/South_Korea__c.field-meta.xml
<CustomField>
    <fullName>South_Korea__c</fullName>
    <label>South Korea</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>