LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Spain__c.field-meta.xml
<CustomField>
    <fullName>Spain__c</fullName>
    <label>Spain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>