LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Sri_Lanka__c.field-meta.xml
<CustomField>
    <fullName>Sri_Lanka__c</fullName>
    <label>Sri Lanka</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>