LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Sri_Lanka_Couple__c.field-meta.xml
<CustomField>
    <fullName>Sri_Lanka_Couple__c</fullName>
    <label>Sri Lanka Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>