LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Sweden__c.field-meta.xml
<CustomField>
    <fullName>Sweden__c</fullName>
    <label>Sweden</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>