LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Switzerland__c.field-meta.xml
<CustomField>
    <fullName>Switzerland__c</fullName>
    <label>Switzerland</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>