LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Syria__c.field-meta.xml
<CustomField>
    <fullName>Syria__c</fullName>
    <label>Syria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>