LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Taiwan__c.field-meta.xml
<CustomField>
    <fullName>Taiwan__c</fullName>
    <label>Taiwan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>