LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Taiwan_Couple__c.field-meta.xml
<CustomField>
    <fullName>Taiwan_Couple__c</fullName>
    <label>Taiwan Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>