LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Tanzania__c.field-meta.xml
<CustomField>
    <fullName>Tanzania__c</fullName>
    <label>Tanzania</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>