LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Thailand__c.field-meta.xml
<CustomField>
    <fullName>Thailand__c</fullName>
    <label>Thailand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>