LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Trinidad_Tobago__c.field-meta.xml
<CustomField>
    <fullName>Trinidad_Tobago__c</fullName>
    <label>Trinidad &amp; Tobago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>