LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Tunisia__c.field-meta.xml
<CustomField>
    <fullName>Tunisia__c</fullName>
    <label>Tunisia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>