LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Turkey__c.field-meta.xml
<CustomField>
    <fullName>Turkey__c</fullName>
    <label>Turkey</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>