LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Uganda__c.field-meta.xml
<CustomField>
    <fullName>Uganda__c</fullName>
    <label>Uganda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>