LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Ukraine__c.field-meta.xml
<CustomField>
    <fullName>Ukraine__c</fullName>
    <label>Ukraine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>