LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/United_Arab_Emirates__c.field-meta.xml
<CustomField>
    <fullName>United_Arab_Emirates__c</fullName>
    <label>United Arab Emirates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>