LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/United_Kingdom__c.field-meta.xml
<CustomField>
    <fullName>United_Kingdom__c</fullName>
    <label>United Kingdom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>