LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Uruguay__c.field-meta.xml
<CustomField>
    <fullName>Uruguay__c</fullName>
    <label>Uruguay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>