LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/US_Virgin_Islands__c.field-meta.xml
<CustomField>
    <fullName>US_Virgin_Islands__c</fullName>
    <label>US Virgin Islands</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>