LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Venezuela__c.field-meta.xml
<CustomField>
    <fullName>Venezuela__c</fullName>
    <label>Venezuela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>