LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Vietnam__c.field-meta.xml
<CustomField>
    <fullName>Vietnam__c</fullName>
    <label>Vietnam</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>