LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Zimbabwe__c.field-meta.xml
<CustomField>
    <fullName>Zimbabwe__c</fullName>
    <label>Zimbabwe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>