LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Zimbabwe_Couple__c.field-meta.xml
<CustomField>
    <fullName>Zimbabwe_Couple__c</fullName>
    <label>Zimbabwe Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>